# backend/cmd/server/wire.go
@@ -4,21 +4,42 @@ import (
 	firebaseauth "firebase.google.com/go/v4/auth"
 	"gorm.io/gorm"
 
+	"hackathon/config"
 	"hackathon/internal/handler"
+	"hackathon/internal/infra/music"
 	"hackathon/internal/infra/rdb"
 	"hackathon/internal/usecase"
+	usecaseport "hackathon/internal/usecase/port"
 )
 
-func buildDependencies(db *gorm.DB, authClient *firebaseauth.Client) handler.Dependencies {
+func buildDependencies(db *gorm.DB, authClient *firebaseauth.Client, cfg *config.Config) handler.Dependencies {
 	userRepo := rdb.NewUserRepository(db)
 	userSettingsRepo := rdb.NewUserSettingsRepository(db)
 	userDeviceRepo := rdb.NewUserDeviceRepository(db)
 	blockRepo := rdb.NewBlockRepository(db)
 	encounterRepo := rdb.NewEncounterRepository(db)
 	trackRepo := rdb.NewUserCurrentTrackRepository(db)
+	trackCatalogRepo := rdb.NewTrackCatalogRepository(db)
+	musicConnectionRepo := rdb.NewMusicConnectionRepository(db)
 	bleTokenRepo := rdb.NewBleTokenRepository(db)
 	reportRepo := rdb.NewReportRepository(db)
 	notificationRepo := rdb.NewNotificationRepository(db)
+	spotifyProvider := music.NewSpotifyProvider(music.SpotifyConfig{
+		ClientID:     cfg.SpotifyClientID,
+		ClientSecret: cfg.SpotifyClientSecret,
+		RedirectURL:  cfg.SpotifyRedirectURL,
+		AuthorizeURL: cfg.SpotifyAuthorizeURL,
+		TokenURL:     cfg.SpotifyTokenURL,
+		APIBaseURL:   cfg.SpotifyAPIBaseURL,
+	})
+	appleMusicProvider := music.NewAppleMusicProvider(music.AppleMusicConfig{
+		ClientID:     cfg.AppleMusicClientID,
+		ClientSecret: cfg.AppleMusicClientSecret,
+		RedirectURL:  cfg.AppleMusicRedirectURL,
+		AuthorizeURL: cfg.AppleMusicAuthorizeURL,
+		TokenURL:     cfg.AppleMusicTokenURL,
+		APIBaseURL:   cfg.AppleMusicAPIBaseURL,
+	})
 
 	return handler.Dependencies{
 		AuthTokenVerifier:   authClient,
@@ -29,5 +50,6 @@ func buildDependencies(db *gorm.DB, authClient *firebaseauth.Client) handler.Dep
 		BleTokenUsecase:     usecase.NewBleTokenUsecase(bleTokenRepo, userRepo, blockRepo),
 		ReportUsecase:       usecase.NewReportUsecase(userRepo, reportRepo),
 		NotificationUsecase: usecase.NewNotificationUsecase(userRepo, notificationRepo),
+		MusicUsecase:        usecase.NewMusicUsecase(userRepo, musicConnectionRepo, trackCatalogRepo, []usecaseport.MusicProvider{spotifyProvider, appleMusicProvider}, cfg.MusicStateSecret, cfg.AppDeepLinkScheme),
 	}
 }
